Fix icons getting squished

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -237,9 +237,8 @@
 }
 
 .birb-menu-item-icon {
-	width: calc(7 * var(--birb-border-size));
-	height: calc(6 * var(--birb-border-size));
-	padding-right: calc(5 * var(--birb-border-size));
+	height: calc(6 * var(--birb-border-size)) !important;
+	padding-right: calc(5 * var(--birb-border-size)) !important;
 	flex-shrink: 0;
 	image-rendering: pixelated;
 	color: var(--birb-highlight);
